--- a/src/assets/style/reset.scss
+++ b/src/assets/style/reset.scss
@@ -7,3 +7,13 @@ a{
   text-decoration: none;
   color:inherit;
 }
+ul,ol{
+  list-style:none;
+}
+//字体默认不继承
+button,input{
+  font:inherit;
+}
+:focus{
+  outline:none;
+}
